# spinemira

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENCE.md  Makefile  README.md  pyproject.toml  tasks.py
examples/: spider_to_bids.py
examples/spider_dataset/: README.md  dataset_description.json  participants.tsv
examples/spider_dataset/derivatives/segmentation/: dataset_description.json
examples/spider_dataset/sub-001/anat/: sub-001_T1w.json  sub-001_T2w.json
examples/spider_dataset/sub-002/anat/: sub-002_T1w.json  sub-002_T2w.json
examples/spider_dataset/sub-003/anat/: sub-003_T1w.json  sub-003_T2w.json
pipelines/imiomics/: README.md  compile_results_for_imiomics_paper.ipynb  estimate_dsca.py  glm_analysis.py  intensity_normalization.py  register_with_straightening_to_single_image.py
pipelines/imiomics/common/: common.py  registration.py
pipelines/imiomics/configuration/nordsten_baseline/estimate_dsca/: estimate_dsca.yaml
pipelines/imiomics/configuration/nordsten_baseline/glm_analysis/: glm_analysis_sst_oc_baseline_T1w.yaml  glm_analysis_sst_oc_baseline_T2w.yaml  glm_analysis_sst_oc_only_csf_normalization_baseline_T1w.yaml  glm_analysis_sst_oc_only_csf_normalization_baseline_T2w.yaml
pipelines/imiomics/configuration/nordsten_baseline/intensity_normalization/: intensity_normalization_healthy.yaml  intensity_normalization_nordsten.yaml
pipelines/imiomics/configuration/nordsten_baseline/registration_to_single_image/: pydeform.yaml  register_with_straightening_to_single_image_healthy.yaml  register_with_straightening_to_single_image_nordsten.yaml
pipelines/totalspineseg_inference/: README.md  segment_example_dataset.yaml  totalspineseg_inference.py
src/spinemira/core/: filters.py  io.py  logging.py
src/spinemira/core/morphology/: straightening.py
src/spinemira/core/registration/: metrics.py  utils.py
src/spinemira/core/segmentation/: labels.py  metrics.py  utils.py
src/spinemira/io/: bids.py  mids.py
src/spinemira/pipelines/: config.py
src/spinemira/plotting/: plot.py
tests/: test_bids_layout.py  test_histogram_matching.py  test_mids_layout.py  test_pipeline_with_cli_config.py
