[project]
name = "spinemira"
version = "0.1.0"
description = ""
authors = [
    {name = "Alice Nilsson",email = "alice.nilsson@vgregion.se"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "simpleitk (>=2.5.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "nilearn (>=0.12.1,<0.13.0)",
    "python-stk (>=0.4,<0.5)",
    "pydeform (>=0.5.2,<0.6.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "totalspineseg[nnunetv2] (>=20260429,<20260430)",
    "tabulate (>=0.9.0,<0.10.0)",
    "cmap (>=0.7.2,<0.8.0)",
    "numpy (>=2.4.4,<3.0.0)",
]

[tool.poetry]
packages = [{include = "spinemira", from = "src"}]
include = ["src/spinemira/py.typed"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
ipympl = "^0.9.8"
jupyterlab = "^4.4.10"
scipy-stubs = "^1.16.3.0"
types-tqdm = "^4.67.0.20250809"
pandas-stubs = "^2.3.2.250926"
types-pyyaml = "^6.0.12.20250915"
ipykernel = "^7.1.0"


[tool.poetry.dependencies]

[[tool.poetry.source]]
name = "gitlab-spinemira"
url = "https://git.vgregion.se/api/v4/projects/6781/packages/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["import-untyped"]
