[project]
name = "spinemira"
version = "1.0.0.dev0"
description = ""
authors = [{ name = "Alice Nilsson", email = "alice.nilsson@vgregion.se" }]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "simpleitk (>=2.5.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "nilearn (>=0.12.1,<0.13.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "cmap (>=0.7.2,<0.8.0)",
    "numpy (>=2.4.4,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "ruff>=0.14.2,<0.15",
    "mypy>=1.18.2,<2",
    "pre-commit>=4.3.0,<5",
    "ipympl>=0.9.8,<0.10",
    "jupyterlab>=4.4.10,<5",
    "scipy-stubs>=1.16.3.0,<2",
    "types-tqdm>=4.67.0.20250809,<5",
    "pandas-stubs>=2.3.2.250926,<3",
    "types-pyyaml>=6.0.12.20250915,<7",
    "ipykernel>=7.1.0,<8",
]

segmentation = [
    "totalspineseg[nnunetv2]>=20260623",
    "kornia<0.8", # Auglab which is used by totalspineseg imports Tensor from kornia.core which is removed in future versions / 260615
]

registration = [
    "python-stk (>=0.4,<0.5)",
    "pydeform (>=0.5.2,<0.6.0)",
]

[[tool.uv.index]]
name = "gitlab-spinemira"
url = "https://git.vgregion.se/api/v4/projects/6781/packages/pypi/simple"
default = true

[tool.uv.sources]
totalspineseg = { git = "https://github.com/neuropoly/totalspineseg.git", rev = "b808c04095809ebee10f8bd93604858c3decbccf" }

[tool.hatch.build.targets.sdist]
include = ["src/spinemira"]

[tool.hatch.build.targets.sdist.force-include]
"src/spinemira/py.typed" = "src/spinemira/py.typed"

[tool.hatch.build.targets.wheel]
include = ["src/spinemira"]

[tool.hatch.build.targets.wheel.sources]
"src/spinemira" = "spinemira"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
disable_error_code = [
    "import-untyped",
    "import-not-found"
]
